# yolov8-program

./: .gitignore  AGENTS.md  CLAUDE.md
.claude/: settings.local.json
backend-python/: main_test6.py
backend-train-model/: AGENTS.md  README.md  build_merged_clothes_dataset.py  config.py  dataset_tools.py  project_config.json  train_workwear.py
docs/: AGENTS.md  (+21 more)
inspection-flask/: AGENTS.md  app.py  main.py  pyproject.toml  settings.py
inspection-flask/applications/: __init__.py  config.py
inspection-flask/applications/common/: curd.py  flask_log.py  hk_custom_threading_plus.py  hk_recorder_threading.py  logic_judge.py  user_auth.py
inspection-flask/applications/common/script/: __init__.py
inspection-flask/applications/common/utils/: http.py  rights.py  thread_camera.py  upload.py  validate.py
inspection-flask/applications/extensions/: __init__.py  init_sqlalchemy.py  init_template_directives.py
inspection-flask/applications/models/: __init__.py  admin_dept_relations.py  admin_hk_camera.py  admin_photo.py  admin_police_station.py  admin_violate_photo.py  admin_violate_rule.py
inspection-flask/applications/schemas/: admin_hk_camera.py  admin_police_station.py
inspection-flask/applications/view/: __init__.py
inspection-flask/applications/view/system/: hk_camera.py
inspection-flask/hk/hksdk/: __init__.py  device.py
inspection-flask/templates/system/hk_camera/: add.html  edit.html  main.html
inspection-flask/utils/: models.py  plots.py  workwear_policy.py
inspection-flask/violation_module/: base.py  vio_workwear_missing.py  vio_zsmjwcjf.py
(+295 files in other folders)
