[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspection-flask"
version = "0.1.0"
description = "YOLOv8-based Flask pipeline for gas-station workwear inspection."
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10,<4",
    "flask>=3,<4",
    "flask-cors>=4,<7",
    "flask-login>=0.6,<1",
    "flask-marshmallow>=1.2,<2",
    "flask-sqlalchemy>=3.1,<4",
    "marshmallow>=3.21,<4",
    "marshmallow-sqlalchemy>=1.1,<2",
    "numpy>=1.26,<3",
    "opencv-python>=4.8,<5",
    "pillow>=10,<12",
    "psycopg2-binary>=2.9,<3",
    "sqlalchemy>=2,<3",
    "torch>=2.1",
    "ultralytics>=8.2,<9",
    "validators>=0.22,<1",
]

[tool.setuptools]
py-modules = ["app", "main", "settings"]

[tool.setuptools.packages.find]
where = ["."]
include = ["applications*", "hk*", "utils*", "violation_module*"]
namespaces = true
